k8/carting.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: carting-app
  labels:
    app: carting-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: carting-app
  template:
    metadata:
      labels:
        app: carting-app
    spec:
      containers:
      - name: carting
        image: registry.gitlab.com/sojidaniels/e-commerce/carting:<VERSION>
        ports:
        - containerPort: 80

      imagePullSecrets: 
      - name: registry-credentials
  
---

apiVersion: v1
kind: Service
metadata:
  name: carting-app-service
spec:
  selector:
    app: carting-app
  ports:
  - port: 3030
    targetPort: 3030
    protocol: TCP
  type: NodePort
