k8/client.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-app
  labels:
    app: client-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client-app
  template:
    metadata:
      labels:
        app: client-app
    spec:
      containers:
      - name: client
        image: registry.gitlab.com/sojidaniels/e-commerce/client:<VERSION>
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
  
---

apiVersion: v1
kind: Service
metadata:
  name: client-app-service
spec:
  selector:
    app: client-app
  ports:
  - port: 80
    targetPort: 3333
    protocol: TCP
  type: NodePort
