k8/wallet.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wallet-app
  labels:
    app: wallet-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wallet-app
  template:
    metadata:
      labels:
        app: wallet-app
    spec:
      containers:
      - name: wallet
        image: registry.gitlab.com/sojidaniels/e-commerce/wallet:<VERSION>
        ports:
        - containerPort: 80

      imagePullSecrets: 
      - name: registry-credentials
  
---

apiVersion: v1
kind: Service
metadata:
  name: wallet-app-service
spec:
  selector:
    app: wallet-app
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
  type: NodePort
